--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "antd": "^5.27.1",
     "json-edit-react": "^1.28.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
